# SimplyEmail

./: CMakeLists.txt  README.md
.github/workflows/: ccpp.yml
lib/: Email.h  EmailAttachment.h  SMTPConnection.h
src/: Email.cpp  EmailAttachment.cpp  SMTPConnection.cpp
